angular-requireJS-ocLazyLoad

--- a/4. myDemo2/app/views/page1/page1.html
+++ b/4. myDemo2/app/views/page1/page1.html
@@ -18,7 +18,7 @@
 
     <section style="margin-top:200px; margin-left: 50px;">
         <div class="well">
-            <button class="btn btn-primary btn-lg" ng-click="loadModule()">Load Module</button>
+            <button class="register-button button-background color-fff" style=" padding: 10px 20px; border-radius: 4px;" ng-click="loadModule()">Load Module</button>
         </div>
 
 
