--- a/4. myDemo2/app/views/shop/shop.html
+++ b/4. myDemo2/app/views/shop/shop.html
@@ -1,5 +1,4 @@
-﻿<div ng-controller="shopController as shop">
-    <div class="navbar border-bottom">
+﻿    <div class="navbar border-bottom">
         <div class="navbar-inner">
             <div class="navbar-left" ng-click="$navigate.back()">
                 <a href="javascript:void(0);">
@@ -14,7 +13,6 @@
             </div>
         </div>
     </div>
-</div>
 
 <ui-loading loading-text="loadingText" show-loading="showLoading"></ui-loading>
 <ui-modal modal="modal"></ui-modal>
